File.: Host
Desc.: Added option --opencl-device-types to select specific OpenCL device types
Issue: 2

Type.: Feature
File.: Host
Desc.: Added option --opencl-vector-width to override automatically selected vector-width size
Issue: 2

Type.: Feature
File.: Host
Desc.: Implemented a new feature that allows to quit at next restore point update (and disable it)
Issue: 10

Type.: Feature
File.: Host
Desc.: Moved rules_optimize to hashcat-utils

Type.: Feature
File.: Host
Desc.: Run weak-hash checks only in straight-attack mode, this greatly reduces code complexity

Type.: Change
File.: Host
Desc.: Renamed option --gpu-accel to --kernel-accel
Issue: 2

Type.: Change
File.: Host
Desc.: Renamed option --gpu-loops to --kernel-loops
Issue: 2

Type.: Change
File.: Host
Desc.: Renamed option --gpu-devices to --opencl-devices
Issue: 2

Type.: Change
File.: Host
Desc.: Expanded version information
Issue: 138

Type.: Change
File.: Host
Desc.: Stick to older libOpenCL to avoid errors like this: version `OPENCL_2.0' not found

Type.: Bug
File.: Host
Desc.: Fixed a bug in combination of --restore and a user immediately aborting the session after restart
Trac.: 684

Type.: Bug
File.: Kernel
Desc.: Fix a bug in the implementation of GOST R 34.11-94, zero length passwords were not cracked

Type.: Bug
File.: Kernel
Desc.: Fix a bug in rule-engine for NVidia devices, the code for left- and right-shift were switched

Type.: Bug
File.: Host
Desc.: Forced default iteration count for -m 2100 = DCC2 hashes to 10240

* changes v2.00 -> v2.01:

Type.: Bug
File.: Host
Desc.: Fix for a cuMemsetD8() 1 error in attacks different from mask attacks
Issue: 1

* changes v1.37 -> v2.00:

Type: Project
File: All
Desc: Made the project Open-Source

Type: Project
File: All
Desc: Switched the license to MIT

Type: Feature
File: Host
Desc: Removed Timebomb-, Beta- and Keyfile- checks

Type: Driver
File: Host
Desc: Added support for AMD APP SDK v3.0 GA

Type: Driver
File: Host